fix(frontend/welcome_pages): fixing components positions issues, wrapping all pages in containers to turn app into scrollable app with responsive windows, updating css styles.

--- a/front_lou/src/components/Button/Button.css
+++ b/front_lou/src/components/Button/Button.css
@@ -1,7 +1,4 @@
 .btn {
-  margin: 0 auto;        /* Centre horizontalement */
-  margin-top: 2rem;      /* Espace en haut */
-  margin-bottom: 2rem;   /* Espace en bas */
   background-color: #eab2bb;
   color: white;
   padding: 12px 24px;
@@ -12,10 +9,10 @@
   height: 50px;
   width: 300px;
   font-size: 18px;
-  margin: 8px 0;
-  transition: all 500ms;
+  transition: all 300ms;
   text-align: center;
   filter: drop-shadow(0 2px 2px #545454);
+  margin: 10px;
 }
 
 .btn:hover {
@@ -49,3 +46,4 @@
   box-shadow: 0 8px 16px #eab2bb;
   text-shadow: 0 0 0.5px white, 0 0 0.5px white;
 }
+
